// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrollActor State Snapshots > captures initial state 1`] = `
{
  "autoScroll": true,
  "nearBottom": true,
  "userScrolled": false,
}
`;

exports[`ScrollActor State Snapshots > captures state during streaming with user scroll 1`] = `
{
  "autoScroll": true,
  "nearBottom": true,
  "userScrolled": false,
}
`;

exports[`ScrollActor State Snapshots > captures state with auto-scroll disabled 1`] = `
{
  "autoScroll": false,
  "nearBottom": true,
  "userScrolled": false,
}
`;
